# OOP_LAB4_META

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  concepts.h  figure.h  point.h  rectangle.h  square.h  trapezoid.h
src/: array.cpp  point.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
test/: tests.cpp
